--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   conditional_builder_null_safety: ^0.0.6
   fluttertoast: ^8.1.2
   cloud_firestore: ^4.3.1
+  dio: ^4.0.6
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
