--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,7 @@ dependencies:
   fluttertoast: ^8.1.2
   cloud_firestore: ^4.3.1
   dio: ^4.0.6
-  http: ^0.13.5
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
